--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps =
+lib_deps = 
+    kosme/arduinoFFT@^2.0.4
     knolleary/PubSubClient@^2.8
